Fixed vertical alignment for avatar.

--- a/less/comments.less
+++ b/less/comments.less
@@ -8,3 +8,7 @@
 	list-style: none;
 	margin: 0;
 }
+
+.comment .avatar {
+	vertical-align: middle;
+}
